# wavConverter

./: CMakeLists.txt  Factory.cpp  Factory.h  IConverter.h  InsertConverter.cpp  InsertConverter.h  Instructions.cpp  Instructions.h  MixConverter.cpp  MixConverter.h  MuteConverter.cpp  MuteConverter.h  Process.cpp  Process.h  StructOfInstructions.h  func.cpp  func.h  main.cpp
